# blog-samples

./: README.md
pico2-arm-dev-setup/: Makefile  README.md  multiply.c
pico2-basic-cmake-project/: CMakeLists.txt  README.md  pico2_basic_cmake.c
pico2-riscv-dev-setup/: .gitignore  Makefile  README.md  hazard3-setup.sh  install-prerequisites.sh  riscv-setup.sh
